--- a/style.css
+++ b/style.css
@@ -4,10 +4,11 @@ html {
 
 body {
     background: white;
-    color: #c2712f;
+    color: #1d1611;
     font-family: 'Open Sans', sans-serif;
     font-size: 17px;
     font-weight: lighter;
+    margin: 0;
 }
 
 @media (max-width: 960px) {
@@ -22,16 +23,25 @@ body {
 }
 
 .card-white {
-    background-color: #494a4b;
+    background-color: #f9faf0;
     padding: 40px;
-    box-shadow: 0px 10px 30px rgb(0 0 0 / 10%);
-    border-radius: 4px;
+    border-radius: 15px;
+    border: 5px solid black;
+    box-shadow: 0px 0px 20px rgb(66, 66, 66);
     margin: 20px 0px;
     text-align: center;
 }
 
+#footer {
+    background-color: rgb(44, 44, 44);
+    color: #f9faf0;
+    text-align: center;
+    margin: 0;
+    padding: 26px;
+}
+
 h1 {
-    color: #c2712f;
+    color: #0d194d;
     font-size: 32px;
     font-weight: 900;
 }
@@ -61,7 +71,12 @@ a {
     padding: 15px 20px;
     border-radius: 4px;
 }
-
+.btn-red {
+    background-color: #e63737;
+    color: white;
+    padding: 15px 20px;
+    border-radius: 4px;
+}
 .list-inline {
     list-style: none;
     padding-left: 0px;
@@ -82,4 +97,8 @@ a {
 
 .fab {
     font-family: "Font Awesome 5 Brands";
+}
+
+.logo-kedge {
+    margin-top: 20px;
 }
